--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
   min-width: 320px;
   font-family: Inter, Arial, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
   background-color: #2a2c2f;
   padding: 0 48px;
   margin: 0;
