Added absent font, changed places block

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url('../vendor/normalize.css');
 
-@import url('../fonts/Inter/inter.css');
+@import url('../vendor/fonts/Inter/inter.css');
 
 @import url('../blocks/page/page.css');
 
