--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,6 +12,8 @@
 @media screen and (max-width: 730px) {
   .footer__link {
     margin-bottom: 32px;
+    font-size: 24px;
+    line-height: 1;
   }
 }
 
