--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,3 +10,15 @@
   margin: 0;
   margin-top: 8px;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
+}
