--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 1.6;
+  line-height: 1.63;
   color: #fff;
   margin: 0;
   margin-bottom: 24px;
@@ -10,4 +10,10 @@
 
 .place__paragraph:last-of-type {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
 }
