--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
   box-sizing: border-box;
   min-width: 320px;
+  max-width: 1500px;
   font-family: Inter, Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -10,7 +11,7 @@
   text-rendering: optimizeLegibility;
   background-color: #2a2c2f;
   padding: 0 48px;
-  margin: 0;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
