--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url('../blocks/lead/__container/lead__container.css');
 @import url('../blocks/lead/__title/lead__title.css');
 @import url('../blocks/lead/__subtitle/lead__subtitle.css');
+@import url('../blocks/lead/__figure/lead__figure.css');
 @import url('../blocks/lead/__image/lead__image.css');
 @import url('../blocks/lead/__caption/lead__caption.css');
 
@@ -31,6 +32,7 @@
 
 @import url('../blocks/places/places.css');
 @import url('../blocks/places/__container/places__container.css');
+@import url('../blocks/places/__place/places__place.css');
 
 @import url('../blocks/place/place.css');
 @import url('../blocks/place/__title/place__title.css');
